--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -5,8 +5,11 @@ layout: default
         <div class="post">
 
           <header class="post-header">
-            <h1 class="post-title">{{ page.title }} {% if page.cv_pdf %}<a href="{{ page.cv_pdf | prepend: 'assets/pdf/' | relative_url}}" target="_blank" rel="noopener noreferrer" class="float-right"><i class="fas fa-file-pdf"></i></a>{% endif %}</h1>
-            <p class="post-description">{{ page.description }}</p>
+            <h1 class="post-title">{{ page.title }} {% if page.cv_pdf %}<a href="{{ page.cv_pdf | prepend: 'assets/pdf/' | relative_url}}" target="_blank" rel="noopener noreferrer" class="float-right"><i class="fas fa-file-pdf"></i></a>{% endif %}
+              {% if page.dl_cv_pdf %}<a href="{{ page.dl_cv_pdf | prepend: 'assets/pdf/' | relative_url}}" target="_blank" rel="noopener noreferrer" class="float-right"><i class="mr-3 fas fa-file-pdf"></i></a>{% endif %}
+            </h1>
+            <p class="post-description float-right">{{ page.description }}</p>
+            <div class="clearfix"></div>
           </header>
 
           <article>
